# computation-number-theory-in-rust

./: Cargo.toml  README.md
examples/: euclidean_method_print.rs  pylo_triple_plot.rs  pytha_triple_plot.rs
src/: base.rs  main.rs
src/base/: euclidean_method.rs  pythagorean_triples.rs  sequence.rs
