[package]
name = "computation-number-theory-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.1"
directories = "4.0"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
